bug: csv label colour didn't pass visibility tests

--- a/ckanext/ontario_theme/fanstatic/ontario_theme.less
+++ b/ckanext/ontario_theme/fanstatic/ontario_theme.less
@@ -444,7 +444,7 @@ main > div:nth-child(2) {
 }
 .label[data-format=csv],
 .label[data-format*=csv] {
-    background-color: #dfb100;
+    background-color: #856A00;
     color: #FFFFFF;
 }
 .label[data-format=xls],
